--- a/src/components/search/SearchOverlay.module.css
+++ b/src/components/search/SearchOverlay.module.css
@@ -8,10 +8,11 @@
 
 .panel {
   position: fixed;
-  left: 50%;
   top: calc(var(--header-h, 0px) + 14px);
-  transform: translateX(-50%);
-  width: min(1240px, calc(100vw - 36px));
+  right: 18px;
+  left: auto;
+  transform: none;
+  width: min(1100px, calc(100vw - 36px));
   height: calc(80vh - var(--header-h, 0px));
   z-index: calc(var(--z-modal) + 1);
   border-radius: 20px;
@@ -205,6 +206,7 @@
 @media (max-width: 900px) {
   .panel {
     top: 12px;
+    right: 12px;
     height: calc(88vh);
   }
   .body {
