--- a/src/components/search/SearchOverlay.module.css
+++ b/src/components/search/SearchOverlay.module.css
@@ -9,10 +9,10 @@
 .panel {
   position: fixed;
   top: calc(var(--header-h, 0px) + 14px);
-  right: 18px;
-  left: auto;
-  transform: none;
-  width: min(1100px, calc(100vw - 36px));
+  left: 50%;
+  right: auto;
+  transform: translateX(-50%);
+  width: min(1240px, calc(100vw - 36px));
   height: calc(80vh - var(--header-h, 0px));
   z-index: calc(var(--z-modal) + 1);
   border-radius: 20px;
@@ -21,6 +21,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .top {
@@ -206,7 +207,7 @@
 @media (max-width: 900px) {
   .panel {
     top: 12px;
-    right: 12px;
+    width: calc(100vw - 24px);
     height: calc(88vh);
   }
   .body {
